# kaggle-deep-learning-notes

./: README.md  main.py  note1.ipynb  pyproject.toml
dataset/: wine_quality.csv
exercises/: exercise1.ipynb  exercise2.ipynb  exercise4.ipynb  tempCodeRunnerFile.ipynb
